--- a/.config/i3/config
+++ b/.config/i3/config
@@ -180,9 +180,10 @@ bindsym $sup+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+# bar {
+        # status_command i3status
+# }
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 default_border pixel 1
 
@@ -201,5 +202,6 @@ focus_follows_mouse no
 exec i3-config-wizard
 
 exec --no-startup-id picom -b
-exec --no-startup-id fcitx5 -d
+exec --no-startup-id fcitx5 -d -r
+exec --no-startup-id dunst
 
