--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -28,7 +28,7 @@ padding = 1
 modules-right = date
 modules-left = i3
 
-font-0 = Hack:pixelsize=11;4
+font-0 = Hack:size=10;3
 
 tray-position = right
 tray-background = ${colors.background-alt}
