--- a/.config/i3/config
+++ b/.config/i3/config
@@ -206,3 +206,7 @@ exec --no-startup-id picom -b
 exec --no-startup-id fcitx5 -d -r
 exec --no-startup-id dunst
 
+# swap ctrl:caps
+exec --no-startup-id setxkbmap -option "ctrl:swapcaps"
+
+
